--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://kklancet@bitbucket.org/kingkongdev/html-boilerplate.git",
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
     "css-mqpacker": "^7.0.0",
@@ -34,13 +35,10 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-debug": "^3.0.0",
     "gulp-terser": "^1.2.0",
-    "gulp-uncss": "^1.0.6",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
     "imagemin-svgo": "^7.0.0",
-    "postcss-assets": "^5.0.0",
-    "postcss-uncss": "^0.17.0"
-  },
-  "dependencies": {}
+    "postcss-assets": "^5.0.0"
+  }
 }
