--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "test",
+    "name": "King Kong Static Site Boilerplate",
     "version": "1.0.0",
     "description": "King Kong Static Site",
     "main": "main.js",
@@ -18,7 +18,6 @@
         "@fullhuman/postcss-purgecss": "^1.3.0",
         "autoprefixer": "^9.6.1",
         "browser-sync": "^2.26.7",
-        "css-mqpacker": "^7.0.0",
         "cssnano": "^4.1.10",
         "gulp": "^4.0.2",
         "gulp-better-rollup": "^4.0.1",
@@ -41,8 +40,5 @@
         "imagemin-svgo": "^7.0.0",
         "postcss-assets": "^5.0.0",
         "rollup": "^1.27.8"
-    },
-    "dependencies": {
-        "jquery": "^3.4.1"
     }
 }
