Fixing invalid name and adding package-lock

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "King Kong Static Site Boilerplate",
+    "name": "king-kong-static-boilerplate",
     "version": "1.0.0",
     "description": "King Kong Static Site",
     "main": "main.js",
