--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://kklancet@bitbucket.org/kingkongdev/html-boilerplate.git"
+        "url": "git+https://nikita_kong@bitbucket.org/kingkongdev/html-boilerplate.git"
     },
     "author": "King Kong",
     "license": "ISC",
-    "homepage": "https://kklancet@bitbucket.org/kingkongdev/html-boilerplate.git",
+    "homepage": "https://nikita_kong@bitbucket.org/kingkongdev/html-boilerplate.git",
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^1.3.0",
         "autoprefixer": "^9.6.1",
