Updated slick slider to swiper slider, Added products section, force redirect to https

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
+# Forse load securely
+RewriteEngine On 
+RewriteCond %{HTTPS} off 
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=30
+
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
 ExpiresActive On
