--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-# Forse load securely
+# Force load securely
 RewriteEngine On 
 RewriteCond %{HTTPS} off 
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=30
