--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "license": "ISC",
     "homepage": "https://nikita_kong@bitbucket.org/kingkongdev/html-boilerplate.git",
     "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^1.3.0",
-        "autoprefixer": "^9.6.1",
-        "browser-sync": "^2.26.7",
-        "cssnano": "^4.1.10",
+        "@fullhuman/postcss-purgecss": "^4.0.3",
+        "autoprefixer": "^10.3.1",
+        "browser-sync": "^2.27.5",
+        "cssnano": "^5.0.7",
         "gulp": "^4.0.2",
         "gulp-better-rollup": "^4.0.1",
         "gulp-cache": "^1.1.3",
@@ -26,20 +26,21 @@
         "gulp-deporder": "^1.2.0",
         "gulp-htmlclean": "^2.7.22",
         "gulp-image-resize": "^0.13.1",
-        "gulp-imagemin": "^6.2.0",
-        "gulp-load-plugins": "^2.0.2",
+        "gulp-imagemin": "^7.1.0",
+        "gulp-load-plugins": "^2.0.7",
         "gulp-newer": "^1.4.0",
-        "gulp-noop": "^1.0.0",
-        "gulp-postcss": "^8.0.0",
+        "gulp-noop": "^1.0.1",
+        "gulp-postcss": "^9.0.0",
         "gulp-rename": "^2.0.0",
         "gulp-responsive": "^3.0.1",
-        "gulp-sass": "^4.0.2",
-        "gulp-sourcemaps": "^2.6.5",
-        "gulp-strip-debug": "^3.0.0",
-        "gulp-terser": "^1.2.0",
+        "gulp-sass": "^5.0.0",
+        "gulp-sourcemaps": "^3.0.0",
+        "gulp-strip-debug": "^4.0.0",
+        "gulp-terser": "^2.0.1",
         "gulp-uglify": "^3.0.2",
-        "imagemin-mozjpeg": "^8.0.0",
-        "postcss-assets": "^5.0.0",
-        "rollup": "^1.27.8"
+        "imagemin-mozjpeg": "^9.0.0",
+        "node-sass": "^6.0.1",
+        "postcss-assets": "^6.0.0",
+        "rollup": "^2.55.1"
     }
 }
