Added SVG and font conversion to gulp

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
         "gulp-sass": "^5.0.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-strip-debug": "^4.0.0",
+        "gulp-svgmin": "^4.0.1",
         "gulp-terser": "^2.0.1",
+        "gulp-ttf2woff": "^1.1.1",
+        "gulp-ttf2woff2": "^4.0.1",
         "gulp-uglify": "^3.0.2",
         "imagemin-mozjpeg": "^9.0.0",
         "node-sass": "^6.0.1",
