--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "imagemin-mozjpeg": "^9.0.0",
         "node-sass": "^6.0.1",
         "postcss-assets": "^6.0.0",
-        "rollup": "^2.55.1"
+        "rollup": "^2.55.1",
+        "gulp-webp": "^4.0.1"
     }
 }
