--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 # Force load securely
-#RewriteEngine On 
-#RewriteCond %{HTTPS} off 
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=30
+RewriteEngine on
+RewriteCond %{HTTPS} !on
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
